src/main/default/objects/Price_Book_Item_Service_Type__c/Price_Book_Item_Service_Type__c.object-meta.xml
<CustomObject>
    <label>Price Book Item Service Type</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Book Item Service Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>