src/main/default/objects/Price_Book_Item_Service_Type__c/fields/Catalog_Item__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Item__c</fullName>
    <description>Price Book Item's Catalog Item ID</description>
    <formula>Price_Book_Item__r.Catalog_Item__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Catalog Item ID</inlineHelpText>
    <label>Catalog Item</label>
    <type>Text</type>
</CustomField>