src/main/default/objects/Price_Book_Item_Service_Type__c/fields/Price_Book_Item__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Price book item linked to the price book item service type. You must a price book item service type to a price book item.</inlineHelpText>
    <label>Price Book Item</label>
    <referenceTo>Price_Book_Item__c</referenceTo>
    <relationshipLabel>Price Book Item Service Types</relationshipLabel>
    <relationshipName>Price_Book_Item_Service_Types</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>