src/main/default/objects/Price_Book_Item_Service_Type__c/fields/Price_Book_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Item_Name__c</fullName>
    <formula>if( ISBLANK(Price_Book_Item__r.Description_Override__c), Price_Book_Item__r.Catalog_Description__c, Price_Book_Item__r.Description_Override__c)</formula>
    <inlineHelpText>Description of the price book item linked to the price book item service type.</inlineHelpText>
    <label>Price Book Item Name</label>
    <type>Text</type>
</CustomField>