src/main/default/objects/Price_Book_Item_Service_Type__c/fields/Price_Book_Name__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Name__c</fullName>
    <formula>Price_Book_Item__r.Price_Book__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Price book in which the price book item service type is included.</inlineHelpText>
    <label>Price Book Name</label>
    <type>Text</type>
</CustomField>