src/main/default/objects/Price_Book_Item_Service_Type__c/fields/PriceBookID__c.field-meta.xml
<CustomField>
    <fullName>PriceBookID__c</fullName>
    <description>The ID of the price book for the price book item selected</description>
    <formula>Price_Book_Item__r.Price_Book__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Book ID</label>
    <type>Text</type>
</CustomField>