src/main/default/objects/Price_Book_Item_Service_Type__c/fields/Segment_Name__c.field-meta.xml
<CustomField>
    <fullName>Segment_Name__c</fullName>
    <formula>TEXT(Service_Type__r.Segment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Business segment for which the price book item service type is used.</inlineHelpText>
    <label>Segment Name</label>
    <type>Text</type>
</CustomField>