src/main/default/objects/Price_Book_Item_Service_Type__c/fields/Service_Line__c.field-meta.xml
<CustomField>
    <fullName>Service_Line__c</fullName>
    <formula>TEXT(Service_Type__r.Service_Line__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Line of business for which the price book item service type is used.</inlineHelpText>
    <label>Service Line</label>
    <type>Text</type>
</CustomField>