src/main/default/objects/Price_Book_Item_Service_Type__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <inlineHelpText>Service type linked to the price book item service type. You must link a price book item service type to a service type.</inlineHelpText>
    <label>Service Type</label>
    <referenceTo>Service_Type__c</referenceTo>
    <relationshipLabel>Price Book Item Service Types</relationshipLabel>
    <relationshipName>Price_Book_Item_Service_Types</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>