src/main/default/objects/Price_Book_Item_Service_Type__c/fields/Service_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Type_Name__c</fullName>
    <formula>TEXT(Service_Type__r.Service_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Name of the service type linked to the price book item service type.</inlineHelpText>
    <label>Service Type Name</label>
    <type>Text</type>
</CustomField>